fix letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,6 @@ section.blue {
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 3em;
-  letter-spacing: 15%;
   line-height: 1.5em;
 }
 
@@ -97,6 +96,11 @@ img {
   margin: 20px;
   max-height: 10vh;
   max-width: 15%;
+}
+
+#maintitle {
+  font-size: 4em;
+  letter-spacing: 8px;
 }
 
 #arrow {
